--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -12,11 +12,7 @@ WORKDIR /repo/build
 RUN cmake ..
 RUN make -j8
 
-RUN mkdir -p /deps
-RUN ldd /repo/build/tools/ir-generator/irgenerator | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
-
 FROM ubuntu:22.04 as package
-
-COPY --from=builder /deps /deps
-COPY --from=builder /repo/build/tools/ir-generator/irgenerator /repo/build/tools/ir-generator/irgenerator
-ENV LD_LIBRARY_PATH=/deps
+RUN apt-get update
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libgc-dev
+COPY --from=builder /repo/build/tools/ir-generator/irgenerator /
